--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,7 +6,7 @@ body {
   }
 
   nav {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500; /* Medium font weight */
     display: flex;
     justify-content: space-between;
@@ -15,6 +15,7 @@ body {
     color: white;
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 
 nav .title {
