--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -312,6 +312,10 @@
   border-radius: 0 0.7rem 0.7rem 0;
 }
 
+.stats-input::placeholder {
+  font-size: 1.5rem;
+}
+
 .stats-input:not(:placeholder-shown) {
   border-radius: 0.7rem 0 0 0.7rem;
   width: calc(100% - 6rem); /* Adjusted to keep the width on the right */
