--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
 
 body {
     position: relative;
-    background: #07111e;
+    background: #000000;
     margin: 0;
     font-size: 16px; /* Set a base font size for the document */
 }
@@ -13,7 +13,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #07111e;
+    background-color: #000000;
     position: sticky;
     top: 0;
     z-index: 2;
@@ -78,7 +78,7 @@ nav ul li a::after {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #0087ca;
+    background-color: #cf7106;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
@@ -114,7 +114,7 @@ nav .menu span {
 }
 
 nav .menu:hover span{
-    background-color: #0087ca; 
+    background-color: #cf7106; 
     transform: scale(1.1);
 }
 
@@ -127,6 +127,10 @@ nav .menu:hover span{
 
 .nav-predictions {
     margin-left: 0.1rem;
+}
+
+.pred-logo {
+    margin-bottom: -0.2rem;
 }
 
 .nav-link {
