--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -426,3 +426,105 @@ input[type="search"]::-webkit-search-results-decoration {
 .regis-link:hover, .login-link:hover {
   text-decoration: underline; /* Add underline on hover if needed */
 }
+
+.stats-search-container {
+  display: flex;
+  margin-top: 4rem;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.stats-form {
+  position: relative;
+  width: 50rem;
+  background: var(--button-background);
+  border-radius: 0.7rem;
+}
+
+.stats-input,
+.stats-button {
+  height: 3rem;
+  border: 0;
+  font-size: 1.3rem;
+}
+
+.stats-input[type="search"] {
+  outline: 0; 
+  width: 101%;
+  background: #101010;
+  padding: 0 1.6rem;
+  border-radius: 0.6rem;
+  appearance: none; 
+  transition: all 0.3s cubic-bezier(0, 0, 0.43, 1.49);
+  transition-property: width, border-radius;
+  z-index: 1;
+  position: relative;
+}
+
+.stats-button {
+  display: none; /* prevent being able to tab to it */
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 6rem;
+  font-weight: bold;
+  background: var(--button-background);
+  cursor: pointer;
+  border-radius: 0 0.7rem 0.7rem 0;
+}
+
+.stats-input::placeholder {
+  font-size: 1.3rem;
+}
+
+.stats-input:not(:placeholder-shown) {
+  border-radius: 0.7rem 0 0 0.7rem;
+  width: calc(100% - 6rem); /* Adjusted to keep the width on the right */
+}
+
+.stats-input:not(:placeholder-shown) + .stats-button {
+  display: block;
+}
+
+.stats-input[type="search"]::-webkit-search-clear-button {
+  display: none;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
+
+/* New CSS for autocomplete suggestions */
+.suggestions-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  background: var(--background-color);
+  border: 1px solid var(--button-background);
+  border-top: none;
+  border-radius: 0 0 0.7rem 0.7rem;
+  width: calc(100% - 6rem); /* Match the width of the search input */
+  max-width: 50rem; /* Limit the width to match the width of the search bar */
+  overflow-y: auto;
+  z-index: 2;
+}
+
+.suggestion-item {
+  padding: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.suggestion-item:hover {
+  background-color: rgba(207, 113, 6, 0.2); /* Adjust as needed */
+}
+
+.no-suggestions {
+  padding: 1rem;
+  text-align: center;
+  color: white; /* Adjust color as needed */
+}
