--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,12 @@
-
+#dark {
+    --background-color: #101010; /* black */
+    --box-shadow-color: rgba(54, 54, 54, 0.5); /* dim gray */
+    --button-background: #cf7106; /* dark orange */
+    --input-background: #000000; /* black */
+    --error-color: #db6464; /* indian red */
+    --success-color: rgb(153, 210, 153); /* medium sea green */
+    --link-color: orange;
+  }
 
 body {
     position: relative;
@@ -78,7 +86,7 @@ nav ul li a::after {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #cf7106;
+    background-color: var(--button-background);
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
@@ -114,7 +122,7 @@ nav .menu span {
 }
 
 nav .menu:hover span{
-    background-color: #cf7106; 
+    background-color: var(--button-background); 
     transform: scale(1.1);
 }
 
